--- a/index.html
+++ b/index.html
@@ -61,6 +61,53 @@
                     </ul>
                 </li>
             </ul>
+            <br>
+            <ul>
+                <li class = "accordion">
+                    <a href="#" class = "accordionBtn">Home</a>
+                    <ul class ="accordionMenu">
+                        <li><a href="#">Chủ đề 1</a></li>
+                        <li><a href="#">Chủ đề 2</a></li>
+                        <li><a href="#">Chủ đề 3</a></li>
+                        <li><a href="#">Chủ đề 4</a></li>
+                    </ul>
+                </li>
+                <li class = "accordion">
+                    <a href="#" class = "accordionBtn">Products</a>
+                    <ul class ="accordionMenu">
+                        <li><a href="#">Sản phẩm 1</a></li>
+                        <li><a href="#">Sản phẩm 2</a></li>
+                        <li><a href="#">Sản phẩm 3</a></li>
+                        <li><a href="#">Sản phẩm 4</a></li>
+                    </ul>
+                </li>
+                <li class = "accordion">
+                    <a href="#" class = "accordionBtn">Forums</a>
+                    <ul class ="accordionMenu">
+                        <li><a href="#">Thảo luận 1</a></li>
+                        <li><a href="#">Thảo luận 2</a></li>
+                        <li><a href="#">Thảo luận 3</a></li>
+                        <li><a href="#">Thảo luận 4</a></li>
+                    </ul>
+                </li>
+                <li class = "accordion">
+                    <a href="#" class = "accordionBtn">Contacts</a>
+                    <ul class ="accordionMenu">
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Fanpage</a></li>
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Phone</a></li>
+                    </ul>
+                </li>
+                <li class = "accordion">
+                    <a href="#" class = "accordionBtn">Helps</a>
+                    <ul class ="accordionMenu">
+                        <li><a href="#">Chat online</a></li>
+                        <li><a href="#">Call</a></li>
+                        <li><a href="#">Mail</a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
         <div id="content"></div>
     </div>
